# integrated_segmentation

./: .gitignore  CmakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt  E_DicomSeries.cpp  E_DicomSeries.h  E_ImageSeries.cpp  E_ImageSeries.h  E_Volume.cpp  E_Volume.h
etc/: E_DicomSeries.cpp  E_DicomSeries.h
gui/: E_HistogramWidget.cpp  E_HistogramWidget.h  E_SegmentationDialog.cpp  E_SegmentationDialog.h  E_TreeWidgetVolume.cpp  E_TreeWidgetVolume.h  E_Window.cpp  E_Window.h
interactor/: E_ContextInteractorStyle.cpp  E_ContextInteractorStyle.h
manager/: E_InteractorStyle.cpp  E_InteractorStyle.h  E_Manager.cpp  E_Manager.h  E_SegmentationManager.cpp  E_SegmentationManager.h  E_VolumeManager.cpp  E_VolumeManager.h
resources/: resources.qrc  resources.rc
resources/icons/: pantone-2.icns
resources/styles/: black.css
thread/: E_SegmentationThread.cpp  E_SegmentationThread.h
